--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build ",
     "start": "craco start",
-    "build": "craco build && cp build/index.html build/404.html",
+    "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
   },
